# mitre-ectf2022

./: .gitignore  README.md  make-docs.sh
bootloader/: Cargo.toml  memory.x
bootloader/src/: buffer.rs  lib.rs
dockerfiles/: 1_build_saffire.Dockerfile
docs/: crates.js  index.html  settings.html  source-files.js
docs/addr2line/: all.html  fn.demangle.html  fn.demangle_auto.html  index.html  struct.Context.html  struct.Frame.html  struct.FrameIter.html  struct.FunctionName.html  struct.Location.html  struct.LocationRangeIter.html
docs/adler/: all.html  fn.adler32_slice.html  index.html  struct.Adler32.html
docs/aead/: all.html  index.html  sidebar-items.js  struct.Error.html  struct.Payload.html  trait.Aead.html  trait.AeadCore.html  trait.AeadInPlace.html  trait.AeadMut.html  trait.AeadMutInPlace.html  trait.Buffer.html  trait.NewAead.html  type.Key.html  type.Nonce.html  type.Result.html  type.Tag.html
docs/backtrace/: all.html  enum.BytesOrWideString.html  enum.PrintFmt.html  fn.clear_symbol_cache.html  fn.resolve.html  fn.resolve_frame.html  fn.resolve_frame_unsynchronized.html  fn.resolve_unsynchronized.html  fn.trace.html  fn.trace_unsynchronized.html  index.html  struct.Backtrace.html  struct.BacktraceFmt.html  struct.BacktraceFrame.html  struct.BacktraceFrameFmt.html  struct.BacktraceSymbol.html  struct.Frame.html  struct.Symbol.html  struct.SymbolName.html
docs/bare_metal/: all.html  (+5 more)
gen_eeprom/: Cargo.toml
gen_eeprom/src/: main.rs
host_tools/: Cargo.toml  build.rs
host_tools/src/: paths.rs  socket.rs
host_tools/src/packaging/: common.rs  firmware.rs  mod.rs
testing-scripts/: build.sh  config-test.sh  firmware-test.sh  gen-image.sh  launch-gdb.sh  launch.sh  orbital-strike.sh  precision-airstrike.sh  reset-emulator.sh  test_suite.sh
(+52143 files in other folders)
