[package]
name = "riir_host_tools"
version = "0.1.0"
edition = "2021"

[build-dependencies]
rand = "0.8.5"
chacha20poly1305 = { version = "0.9.0", features = ["std"] }
crypto_secretstream = { git = "https://github.com/lhhaber/nacl-compat", features = ["serde"] }
p256 = { version = "0.10.1", default-features = false, features = ["ecdsa", "sha256"] }

[dependencies]
clap = { version = "3.0.14", features = ["derive"] }
color-eyre = "0.6.0"
serde = { version = "1.0", features = ["derive"] }
chacha20poly1305 = "0.9.0"
crypto_secretstream = { git = "https://github.com/lhhaber/nacl-compat", features = ["serde"] }
p256 = { version = "0.10.1", default-features = false, features = ["ecdsa", "sha256", "serde"] }
blake2 = "0.10.4"
rand = "0.8.5"
generic-array = { version = "0.14.5", features = ["serde"] }
serde-big-array = { version = "0.3.2", features = ["const-generics"] }
bincode = "1.3.3"
hex = "0.4.3"
arbitrary = { version = "1.1.0", optional = true, features = ["derive"] }

[features]
emulator = []
production = []

[[bin]]
name = "boot"

[[bin]]
name = "cfg_load"

[[bin]]
name = "cfg_protect"

[[bin]]
name = "fw_protect"

[[bin]]
name = "fw_update"

[[bin]]
name = "readback"

[profile.release]
lto = true
strip = true
codegen-units = 1
